--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@
   max-width: 100%;
 }
 
+.link-more {
+  position: absolute;
+  bottom: 20px;
+  right: 50px;
+}
+
 #example-doc pre {
   overflow-y: auto;
   font-size: 10px;
