--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .cover-blurred {
-  filter: blur(3px);
+  filter: blur(4px);
 }
 
 .full-width {
@@ -43,6 +43,14 @@
   max-height: 80%;
   margin: 20px auto;
   box-shadow: 0 0 100px 10px #ccc;
+}
+
+.media-no-mh {
+  max-height: initial;
+}
+
+.useful-resources {
+  font-size: 22px;
 }
 
 .long-list {
