--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
   filter: blur(4px);
 }
 
+.cover-full {
+  max-height: initial;
+}
+
 .full-width {
   max-width: 100%;
 }
@@ -57,6 +61,11 @@ ul.no-bullets > li::before {
   margin-bottom: 0;
 }
 
+#contributors-slide,
+#contributors-slide h2 {
+  color: #fff;
+}
+
 .broken-build-detailed-slide {
   white-space: pre !important;
   font-size: 16px;
@@ -88,6 +97,12 @@ span.note {
 
 .long-list {
   font: 20px/1.6 'PT Sans', sans-serif;
+}
+
+.typos-list {
+  color: crimson;
+  margin-top: 6% !important;
+  grid-column-gap: 50px;
 }
 
 #intro h2 {
@@ -146,14 +161,91 @@ span.note {
   border-radius: 50%;
 }
 
+#typo-mem .speech {
+  position: absolute;
+  left: 20%;
+  top: 42%;
+  width: 351.435px;
+  height: 146.998px;
+  background-image: url(pictures/speech-buble.png);
+  background-size: 100% 100%, auto;
+}
+
+#typo-mem .speech span {
+  position: relative;
+  top: 38%;
+  left: 3%;
+  line-height: 28px;
+  font-family: Arial;
+  display: block;
+  font-size: 25px;
+}
+
+#hacktoberfest .note-1 {
+  position: absolute;
+  top: 5px;
+  color: gray;
+  font-size: 12px;
+  left: 5%;
+}
+
+#hacktoberfest ul {
+  color: #fff;
+  position: absolute;
+  right: 3%;
+  bottom: 26%;
+  font-size: 18px;
+}
+
+#hacktoberfest .note-2 {
+  position: absolute;
+  bottom: 11px;
+  color: gray;
+  font-size: 12px;
+  left: 5%;
+}
+
+.fry {
+  position: absolute;
+  bottom: 0;
+  right: 9%;
+  width: 34%;
+}
+
 .rnd-php-logo {
   width: 205px;
 }
 
 .contributors-list {
   font-size: 19px;
+  display: inline-block;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 0 5px !important;
 }
 
 .right-way {
   color: green;
+}
+
+#child div[class^="note-"] {
+  text-shadow: black -1px 0px, black 0px 1px, black 1px 0px, black 0px -1px;
+  color: #fff;
+  font-family: impact;
+  font-size: 42px;
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  width: 100%;
+}
+
+#child .note-1 {
+  top: 5%;
+}
+
+#child .note-2 {
+  bottom: 5%;
 }
